# crewai-manoon

./: .env  README.md  setup.py
manoon_crew/: README.md  pyproject.toml
manoon_crew/src/manoon_crew/: crew.py  main.py
manoon_crew/src/manoon_crew/config/: agents.yaml  tasks.yaml
